Reorganised code, removed complexity and optimized for memory usage for animations

--- a/MonoMenu/MonoMenu.csproj
+++ b/MonoMenu/MonoMenu.csproj
@@ -48,15 +48,14 @@
     <Compile Include="Engine\Events\AnimatedEvent.cs" />
     <Compile Include="Engine\Events\BasicEvent.cs" />
     <Compile Include="Engine\Events\MenuEvent.cs" />
+    <Compile Include="Engine\LogicalTree\EllipseNode.cs" />
     <Compile Include="Engine\LogicalTree\LogicalNode.cs" />
+    <Compile Include="Engine\LogicalTree\RectangleNode.cs" />
     <Compile Include="Engine\MonoMenu.cs" />
     <Compile Include="Engine\Monitor.cs" />
     <Compile Include="Engine\MouseInput.cs" />
     <Compile Include="Engine\NodeProperties.cs" />
-    <Compile Include="Engine\VisualPrimitives\Ellipse.cs" />
-    <Compile Include="Engine\VisualPrimitives\Polygon.cs" />
-    <Compile Include="Engine\VisualPrimitives\Rectangle.cs" />
-    <Compile Include="Engine\VisualPrimitives\VisualPrimitive.cs" />
+    <Compile Include="Engine\VisualPrimitives\PrimitiveHandler.cs" />
     <Compile Include="Engine\VisualTree\VisualNode.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
