--- a/MonoMenu/MonoMenu.csproj
+++ b/MonoMenu/MonoMenu.csproj
@@ -49,12 +49,14 @@
     <Compile Include="Engine\Events\BasicEvent.cs" />
     <Compile Include="Engine\Events\MenuEvent.cs" />
     <Compile Include="Engine\LogicalTree\EllipseNode.cs" />
+    <Compile Include="Engine\LogicalTree\ImageNode.cs" />
     <Compile Include="Engine\LogicalTree\LogicalNode.cs" />
     <Compile Include="Engine\LogicalTree\RectangleNode.cs" />
     <Compile Include="Engine\MonoMenu.cs" />
     <Compile Include="Engine\Monitor.cs" />
     <Compile Include="Engine\MouseInput.cs" />
     <Compile Include="Engine\NodeProperties.cs" />
+    <Compile Include="Engine\Style.cs" />
     <Compile Include="Engine\VisualPrimitives\PrimitiveHandler.cs" />
     <Compile Include="Engine\VisualTree\VisualNode.cs" />
     <Compile Include="Game1.cs" />
