--- a/MonoMenu/MonoMenu.csproj
+++ b/MonoMenu/MonoMenu.csproj
@@ -2,6 +2,9 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props')" />
   <PropertyGroup>
+    <DisableFastUpToDateCheck>true</DisableFastUpToDateCheck>
+  </PropertyGroup>
+  <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
@@ -41,13 +44,15 @@
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
+  <PropertyGroup>
+    <RunPostBuildEvent>Always</RunPostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Engine\Animations\BaseAnimation.cs" />
     <Compile Include="Engine\Animations\ColorAnimation.cs" />
     <Compile Include="Engine\Animations\DoubleAnimation.cs" />
     <Compile Include="Engine\Effects\BasicEffect.cs" />
-    <Compile Include="Engine\Effects\BoxBlurEffect.cs" />
-    <Compile Include="Engine\Effects\GaussianBlurEffect.cs" />
+    <Compile Include="Engine\Effects\BlurEffect.cs" />
     <Compile Include="Engine\Events\AnimatedEvent.cs" />
     <Compile Include="Engine\Events\BasicEvent.cs" />
     <Compile Include="Engine\Events\MenuEvent.cs" />
@@ -126,8 +131,18 @@
     </None>
     <None Include="app.manifest" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Engine\Effects\Blur.fx" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>call $(ProjectDir)Effectbuilder.bat</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
