--- a/MonoMenuTest/MonoMenuTest.csproj
+++ b/MonoMenuTest/MonoMenuTest.csproj
@@ -2,33 +2,15 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Common.props')" />
   <PropertyGroup>
-    <DisableFastUpToDateCheck>true</DisableFastUpToDateCheck>
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
-  </PropertyGroup>
-  <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{770A92C7-D282-41F6-ABFD-D4324D7D89F2}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{7C7954C5-FECA-4DF7-A6D8-CD4439AB6CEF}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MonoMenu</RootNamespace>
-    <AssemblyName>MonoMenu</AssemblyName>
+    <RootNamespace>MonoMenuTest</RootNamespace>
+    <AssemblyName>MonoMenuTest</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>DesktopGL</MonoGamePlatform>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -42,8 +24,6 @@
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>false</Prefer32Bit>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\DesktopGL\AnyCPU\Debug\MonoMenu.xml</DocumentationFile>
-    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <OutputPath>bin\$(MonoGamePlatform)\$(Platform)\$(Configuration)\</OutputPath>
@@ -58,34 +38,12 @@
   <PropertyGroup>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
-  <PropertyGroup />
   <PropertyGroup>
-    <RunPostBuildEvent>Always</RunPostBuildEvent>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
+    <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Engine\Animations\BaseAnimation.cs" />
-    <Compile Include="Engine\Animations\ColorAnimation.cs" />
-    <Compile Include="Engine\Animations\DoubleAnimation.cs" />
-    <Compile Include="Engine\Effects\BasicEffect.cs" />
-    <Compile Include="Engine\Effects\BlurEffect.cs" />
-    <Compile Include="Engine\Events\AnimatedEvent.cs" />
-    <Compile Include="Engine\Events\BasicEvent.cs" />
-    <Compile Include="Engine\Events\MenuEvent.cs" />
-    <Compile Include="Engine\LogicalTree\EllipseNode.cs" />
-    <Compile Include="Engine\LogicalTree\ImageNode.cs" />
-    <Compile Include="Engine\LogicalTree\LogicalNode.cs" />
-    <Compile Include="Engine\LogicalTree\RectangleNode.cs" />
-    <Compile Include="Engine\LogicalTree\TextboxNode.cs" />
-    <Compile Include="Engine\MonoMenu.cs" />
-    <Compile Include="Engine\Monitor.cs" />
-    <Compile Include="Engine\MouseInput.cs" />
-    <Compile Include="Engine\NodeProperties.cs" />
-    <Compile Include="Engine\Style.cs" />
-    <Compile Include="Engine\VisualPrimitives\PrimitiveHandler.cs" />
-    <Compile Include="Engine\VisualTree\VisualNode.cs" />
+    <Compile Include="Game1.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -146,29 +104,15 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="app.manifest" />
-    <None Include="EffectBuilder.bat" />
-    <None Include="Engine\Effects\Blur.mgfxo" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Engine\Effects\Blur.fx" />
-  </ItemGroup>
-  <ItemGroup>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
+    <ProjectReference Include="..\MonoMenu\MonoMenu.csproj">
+      <Project>{770a92c7-d282-41f6-abfd-d4324d7d89f2}</Project>
+      <Name>MonoMenu</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
-  </PropertyGroup>
-  <PropertyGroup>
-    <PostBuildEvent>for /r %25%25I in (*.mgfxo) do del %25%25I
-for /r %25%25i in (*.fx) do c:\"Program Files (x86)"\MSBuild\MonoGame\v3.0\Tools\2MGFX.exe %25%25i %25%25~di%25%25~pi%25%25~ni.mgfxo /Debug /Profile:OpenGL</PostBuildEvent>
-  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
